--- a/site/layouts/partials/meta.html
+++ b/site/layouts/partials/meta.html
@@ -9,4 +9,7 @@
 <meta property="og:url" content="{{ .URL }}">
 
 {{ template "_internal/google_analytics.html" . }}
+
 {{ .Hugo.Generator }}
+
+{{ .Hugo.Version }}
