--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -13,7 +13,7 @@ $success: $accent;
 $error: tomato;
 
 // Typography
-$font: "Lato",sans-serif;
+$font: "Montserrat",sans-serif;
 $font-size: 16px;
 $line-height: 1.7;
 $light: 300;
