--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300");
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -368,7 +368,7 @@ img, svg {
   margin-right: 8pt; }
 
 html {
-  font-family: "Lato", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   color: #666;
   line-height: 1.7;
@@ -557,7 +557,7 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   -webkit-transition: 0.7s;
   transition: 0.7s;
   color: #111;
-  font-family: "Lato", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   padding: 10pt 20pt;
   border-radius: 30px;
@@ -578,7 +578,7 @@ textarea {
   -webkit-transition: 0.7s;
   transition: 0.7s;
   color: #111;
-  font-family: "Lato", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   padding: 12pt 24pt;
   border-radius: 30px;
@@ -599,7 +599,7 @@ select {
   -webkit-transition: 0.7s;
   transition: 0.7s;
   color: #111;
-  font-family: "Lato", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   padding: 10pt 20pt;
   margin-bottom: 1.4em;
@@ -1252,6 +1252,24 @@ select {
     .footer__textLogo {
       min-width: 25%;
       font-size: 1.325rem; } }
+
+.footer__imageLogo {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding-right: 16pt;
+  display: block;
+  cursor: pointer;
+  min-width: 33%;
+  margin-bottom: 1.5rem; }
+  @media (min-width: 600px) {
+    .footer__imageLogo {
+      margin-bottom: 0; } }
+  @media (min-width: 992px) {
+    .footer__imageLogo {
+      min-width: 25%;
+      font-size: 1.325rem; } }
+  .footer__imageLogo img {
+    max-width: 150px; }
 
 .footer__data {
   display: -webkit-box;
