--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,6 @@
 // Unicode characters
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Lato:400');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300');
 
 @import "utils/normalize";
 @import "base/variables";
