--- a/site/layouts/page/contact.html
+++ b/site/layouts/page/contact.html
@@ -32,7 +32,7 @@
             <label for="check">By checking this box you agree that we can contact you via phone or electronic means.</label>
           </div>
           <div class="half">
-            <p netlify-recaptcha></p>
+            <div data-netlify-recaptcha></div>
           </div>
         </div>
         <button class="button button__primary" type="submit" value="send" disabled="true">Submit</button>
