--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -526,15 +526,19 @@ button, .button {
 
 form {
   margin-bottom: 1.5em; }
-  form .double {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-    form .double .half {
-      max-width: 48%; }
+  @media (min-width: 992px) {
+    form .double {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+  form .double .half {
+    width: 100%; }
+    @media (min-width: 992px) {
+      form .double .half {
+        max-width: 48%; } }
 
 .form {
   margin-left: auto;
