--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -10,13 +10,13 @@
 <!-- Page content -->
 <div class="page">
 		<div class="container">
-			<div class="page__main">
+			<div class="">
 				<div class="text-container">
-					<h3 class="page__main__title">This is the main area</h3>
-					<p>Write or do whatever you want here!</p>
+					{{ .Content }}
 				</div>
 			</div>
 		</div>
 	</div>
 
 {{end}}
+
