--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -9,7 +9,7 @@
           <img src="/{{ .Params.logo }}" class="hero__image">
           
           <a href="/contact" class="button button__accent">Make Appointment</a>
-          <a href="#steps" class="button hero__button">Learn more</a>
+          <a href="#steps" class="button hero__button scroll">Learn more</a>
         </div>
       </div>
     </div>
