--- a/site/layouts/partials/styles.html
+++ b/site/layouts/partials/styles.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
-<link rel="stylesheet" href="{{ "css/fonts.css" | absURL }}">
+<link rel="stylesheet" href="{{ "fonts/fonts.css" | absURL }}">
