--- a/src/sass/elements/_typography.scss
+++ b/src/sass/elements/_typography.scss
@@ -3,7 +3,7 @@ html{
 	font-size: $font-size;
 	color: $text;
 	line-height: $line-height;
-	font-weight: $light;
+	font-weight: $normal;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
