Few Fixes here and there

--- a/site/layouts/page/contact.html
+++ b/site/layouts/page/contact.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <label for='message'>Message</label>
-        <textarea placeholder="Hello..." id='message'></textarea>
+        <textarea placeholder="Hello..." id='message' required></textarea>
         <div class="double">
           <div class="half">
             <input type="checkbox" id="check" required />
@@ -35,7 +35,7 @@
             <div data-netlify-recaptcha></div>
           </div>
         </div>
-        <button class="button button__primary" type="submit" value="send" disabled="true">Submit</button>
+        <button class="button button__primary" type="submit" value="send">Submit</button>
       </form>
     </div>
   </div>
