--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -10,8 +10,8 @@
 <!-- Page content -->
 <div class="page">
 		<div class="container">
-			<div class="">
-				<div class="text-container">
+			<div class="page__main">
+				<div class="text-container text-container--center">
 					{{ .Content }}
 				</div>
 			</div>
