--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -1,5 +1,6 @@
 <!-- Hero unit -->
-<div class="hero" style="background-image:url(/{{ .Params.image }});">
+{{ $image := (resources.Get .Params.image).Fill "2000x1168" }}
+<div class="hero" style="background-image:url({{ $image.RelPermalink }});">
   <div class="hero__overlay hero__overlay--gradient"></div>
   <div class="hero__inner">
     <div class="container">
