--- a/site/layouts/partials/blocks/block-expanded.html
+++ b/site/layouts/partials/blocks/block-expanded.html
@@ -3,9 +3,8 @@
   <div class="container">
     <div class="expanded__inner">
       <div class="expanded__media">
-        {{- if .Params.image -}}
-        {{ $image := (resources.Get .Params.image).Fill "1000x800" }}
-        <img src="{{ $image.RelPermalink }}" class="expanded__image">
+        {{- with .Params.image -}}
+        <img src="/{{ . }}" class="expanded__image">
         {{ end }}
       </div>
       <div class="expanded__content">
