--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,11 +1,11 @@
 .hero{
 	position: relative;
 	width: 100%;
-	background-image: url("../images/evie_default_bg.jpeg");
 	box-shadow: $hero-shadow;
 	background-size: cover; 
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	color: $hero-color;
 
 	&__inner{
