--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -1441,8 +1441,11 @@ select {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   color: #ffffff; }
+  @media (min-width: 992px) {
+    .hero {
+      background-attachment: fixed; } }
   .hero__inner {
     position: relative;
     z-index: 3; }
@@ -1897,8 +1900,11 @@ select {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   width: 100%; }
+  @media (min-width: 992px) {
+    .page__header {
+      background-attachment: fixed; } }
 
 .page__header__inner {
   padding: 77px 0 0 0;
