--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 
-  <title>{{ block "title" . }}{{- with .Title }}{{ . }} | {{ end }}{{ .Site.Title -}}{{ end }}</title>
+  <title>{{ block "title" . }}{{- with .Title }}{{ . }} | {{ end }}{{ .Site.Title -}}{{ end }} | Alabama Chiropractic</title>
 
   {{ block "meta" . }}{{ partial "meta" . }}{{end}}
 
