--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="footer__inner">
       <a href="/" class="footer__imageLogo" alt="Logo for {{ .Site.Title }}">
-        <img src="/images/logo-large.svg">
+        <img src="/uploads/logo-large.svg">
       </a>
       <div class="footer__data">
         <div class="footer__data__item">
