--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -5,6 +5,7 @@
 {{- if eq .template "block-steps" -}}{{ partial "blocks/block-steps" (dict "Params" .) }}{{- end -}}
 {{- if eq .template "block-expanded" -}}{{ partial "blocks/block-expanded" (dict "Params" .) }}{{- end -}}
 {{- if eq .template "block-calltoaction" -}}{{ partial "blocks/block-calltoaction" (dict "Params" .) }}{{- end -}}
+{{- if eq .template "block-content" -}}{{ partial "blocks/block-content" (dict "Params" .) }}{{- end -}}
 {{- end -}}
 
 <!-- Page content -->
