--- a/site/layouts/partials/blocks/block-content.html
+++ b/site/layouts/partials/blocks/block-content.html
@@ -1,7 +1,7 @@
   <!-- Content -->
   <div class="content">
 		<div class="container">
-			<div class="">
+			<div class="text-container center-element">
 				{{- with .Params.heading -}}
 				<h2>{{ markdownify . }}</h2>
 				{{ end }}
