--- a/site/layouts/partials/blocks/block-expanded.html
+++ b/site/layouts/partials/blocks/block-expanded.html
@@ -8,7 +8,7 @@
           <img src="{{ $image.RelPermalink }}" class="expanded__image" alt="">
           {{ else }}
           {{ $imagecropped := $image.Fill "600x600 center" }}
-          <img src="{{ $imagecropped.RelPermalink }}" class="expanded__image" alt="">
+          <img src="{{ $imagecropped.RelPermalink }}" class="expanded__image rounded" alt="">
         {{ end }}
       </div>
       <div class="expanded__content">
