--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -3,10 +3,10 @@ $primary: rgba(34,45,105,1);
 $secondary: #28666e;
 $accent: #2a9d8f;
 $primary-dark: darken($primary,8%);
-$text: #666;
+$text: #333;
 $text-dark: #111;
 $background: #ffffff;
-$background-alt: #f7f7f7;
+$background-alt: #fafafa;
 $background-dark: #333C44;
 $line: #eee;
 $success: $accent;
@@ -27,7 +27,7 @@ $spacing-unit: 4rem;
 // Containers
 $containerWidth: 88%; // Percentage of screen width
 $containerMax: 1080px; // Largest fixed width
-$text-container: 640px; // Limit texts for readability
+$text-container: 720px; // Limit texts for readability
 
 // Media queries
 $tablet-width: 600px !default; // Tablets
@@ -46,3 +46,6 @@ $hero-shadow: 0 4px 11px rgba(124,146,169,0.5);
 $hero-color-opacity: 0.8;
 $hero-mask-opacity: 0.66;
 $hero-down-size: 1rem; 
+
+// Other
+$box-shadow: 11px 10px 40px rgba(0,0,0,.2);
