--- a/src/sass/components/_steps.scss
+++ b/src/sass/components/_steps.scss
@@ -1,5 +1,4 @@
 .steps{
-	text-align: center;
 	padding: 16pt 0;
 }
 
@@ -19,6 +18,7 @@
 
 	&:first-child{
 		border-top: none;
+		
 	}
 
 	@include desktop{
@@ -37,8 +37,8 @@
 
 .step__overlay{
 	position: absolute;
-	height: 30vh;
-	width: 30vh;
+	height: 40vh;
+	width: 40vh;
 	margin: 0 auto;
 	top: 0;
 	left: 0;
@@ -50,8 +50,17 @@
 	}
 }
 
-.step__image{
+.step__svg{
 	height: 30vh;
+	@include noDragging;
+
+	@include tablet{
+		max-width:none;
+	}
+}
+
+.step__image{
+	height: 40vh;
 	@include noDragging;
 
 	@include tablet{
@@ -64,4 +73,8 @@
 	text-align: left;
 	margin-left: auto;
 	margin-right: auto;
+	display: inline-block;
+	@include desktop{
+		max-width: 80%;
+	}
 }
