--- a/src/sass/components/_expanded.scss
+++ b/src/sass/components/_expanded.scss
@@ -52,14 +52,16 @@
 	max-width: 220px;
 
 	@include desktop{
-		max-width: 400px;
+		max-width: 300px;
 	}
 }
 
 .expanded__title{
 	max-width: 550px;
+	text-align: left;
 }
 
 .expanded__text{
 	max-width: 60ch;
+	text-align: left;
 }
