--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -729,7 +729,7 @@ p {
   margin-bottom: 1.3em; }
 
 h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
+  margin: .5em 0 2em;
   line-height: 1.35;
   color: #111;
   font-weight: 400; }
