--- a/src/sass/elements/_typography.scss
+++ b/src/sass/elements/_typography.scss
@@ -15,7 +15,7 @@ p{
 }
 
 h1, h2, h3, h4 {
-	margin: 1.414em 0 0.5em;
+	margin: .5em 0 2em;
 	line-height: 1.35;
 	color: $text-dark;
 	font-weight: $normal;
