--- a/site/layouts/partials/blocks/block-featured.html
+++ b/site/layouts/partials/blocks/block-featured.html
@@ -19,8 +19,10 @@
 				{{- with .Params.heading -}}
 				<h4>{{ . }}</h4>
 				{{ end }}
-				<div class="left-align">
-					{{ markdownify .Params.content }}
+				<div class="text-container text-container--center">
+					<div class="left-align">
+						{{ markdownify .Params.content }}
+					</div>
 				</div>
 			</div>
 		</div>
