--- a/site/layouts/partials/blocks/block-calltoaction.html
+++ b/site/layouts/partials/blocks/block-calltoaction.html
@@ -1,16 +1,20 @@
 	<!-- Call To Action -->
-	<div class="cta cta--reverse">
+	{{ $image := (resources.Get .Params.image).Fill "2000x1168" }}
+	<div class="cta" style="background-image:url({{ $image.RelPermalink }});">
+		<div class="cta__overlay"></div>
 		<div class="container">
 			<div class="cta__inner">
-				{{- with .Params.heading -}}
-				<h2 class="cta__title">{{ markdownify . }}</h2>
-				{{ end }}
-				{{- with .Params.content -}}
-				<p class="cta__sub cta__sub--center">{{ markdownify . }}</p>
-				{{ end }}
-				{{- with .Params.button_url -}}
-				<a href="{{ . }}" class="button button__accent">{{ $.Params.button_text }}</a>
-				{{ end }}
+				<div class="cta__content">
+					{{- with .Params.heading -}}
+					<h2 class="cta__title">{{ markdownify . }}</h2>
+					{{ end }}
+					{{- with .Params.content -}}
+					<p class="cta__sub cta__sub--center">{{ markdownify . }}</p>
+					{{ end }}
+					{{- with .Params.button_url -}}
+					<a href="{{ . }}" class="button button__accent">{{ $.Params.button_text }}</a>
+					{{ end }}
+				</div>
 			</div>
 		</div>
 	</div>
