--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -1722,11 +1722,39 @@ select {
   text-align: left; }
 
 .cta {
+  position: relative;
+  width: 100%;
+  height: 50vh;
+  min-height: 50vh;
+  -webkit-box-shadow: 0 4px 11px rgba(124, 146, 169, 0.5);
+          box-shadow: 0 4px 11px rgba(124, 146, 169, 0.5);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  color: #fff;
+  text-align: center; }
+  @media (min-width: 992px) {
+    .cta {
+      background-attachment: fixed; } }
+  .cta__inner {
+    position: relative;
+    z-index: 3; }
+
+.cta__overlay {
   background: -webkit-gradient(linear, left top, right top, from(#222d69), to(#28666e));
   background: linear-gradient(to right, #222d69, #28666e);
-  color: #fff;
-  padding: 48pt 0;
-  text-align: center; }
+  position: absolute;
+  height: 50vh;
+  min-height: 50vh;
+  width: 100%;
+  opacity: 0.8;
+  z-index: 1;
+  background-color: #222d69; }
+
+.cta__content {
+  padding: 40pt 0;
+  overflow: auto; }
 
 .cta--reverse {
   background: -webkit-gradient(linear, right top, left top, from(#222d69), to(#28666e));
