--- a/src/sass/components/_cta.scss
+++ b/src/sass/components/_cta.scss
@@ -1,10 +1,37 @@
 .cta{
-	background: linear-gradient(to right, $primary, $secondary);
+	position: relative;
+	width: 100%;
+	height: 50vh;
+	min-height: 50vh;
+	box-shadow: $hero-shadow;
+	background-size: cover; 
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	@include desktop{
+		background-attachment: fixed;
+	}
 	color: #fff;
-	padding: 48pt 0;
 	text-align: center;
+	&__inner{
+		position: relative;
+		z-index: 3;
+	}
 }
-
+.cta__overlay{
+	background: linear-gradient(to right, $primary, $secondary);
+	position: absolute;
+	height: 50vh;
+	min-height: 50vh;
+	width: 100%;
+	opacity: $hero-color-opacity;
+	z-index: 1;
+	background-color: $primary;
+}
+.cta__content{
+	padding: 40pt 0;
+	overflow: auto;
+}
 .cta--reverse{
 	background: linear-gradient(to left, $primary, $secondary);
 }
