--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -354,7 +354,8 @@ img, svg {
   float: left; }
 
 .text-container {
-  max-width: 720px; }
+  max-width: 720px;
+  padding: 2em 0 0; }
   .text-container--center {
     margin-left: auto;
     margin-right: auto; }
@@ -729,7 +730,7 @@ p {
   margin-bottom: 1.3em; }
 
 h1, h2, h3, h4 {
-  margin: .5em 0 2em;
+  margin: .5em 0 1em;
   line-height: 1.35;
   color: #111;
   font-weight: 400; }
@@ -1719,7 +1720,8 @@ select {
 
 .expanded__text {
   max-width: 60ch;
-  text-align: left; }
+  text-align: left;
+  margin-bottom: 2em; }
 
 .cta {
   position: relative;
