--- a/site/layouts/partials/styles.html
+++ b/site/layouts/partials/styles.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
 <link rel="stylesheet" href="{{ "fonts/fonts.css" | absURL }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.7/tiny-slider.css">
