--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -6,17 +6,16 @@
 			<div class="page__inner">
 				<div class="page__menu">
 					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Active page</a></li>
-						<li><a href="#">Second page</a></li>
-						<li><a href="#">Third page</a></li>
-						<li><a href="#">Fourth page</a></li>
-						<li><a href="#">Fifth page</a></li>
+						{{ $currentPage := . }}
+						<li><a href="{{ .Permalink }}" class="vMenu--active">{{ .Title }}</a></li>
+						{{ range .Pages }}
+							<li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+						{{ end }}
 					</ul>
 				</div>
 				<div class="page__main">
 					<div class="text-container">
-						<h3 class="page__main__title">This is the main area</h3>
-						<p>Write or do whatever you want here!</p>
+						{{ .Content }}
 					</div>
 				</div>
 			</div>
