--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -1,2 +1,2 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.7/min/tiny-slider.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lory.js/2.5.1/lory.min.js"></script>
 <script src="/app.js"></script>
