--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -2,7 +2,7 @@
 {{ block "page-hero" . }}{{ partial "page-hero" . }}{{end}}
 
 <!-- Page content -->
-{{ if .Parent }}
+{{ if not .Parent.IsHome }}
 <div class="page">
 	<div class="container">
 		<div class="page__inner">
