--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,7 +22,7 @@
 @import "components/steps";
 @import "components/expanded";
 @import "components/cta";
-@import "components/slider";
+@import "components/reviews";
 @import "components/footer";
 @import "components/auth";
 @import "components/page";
