--- a/src/sass/base/_containers.scss
+++ b/src/sass/base/_containers.scss
@@ -20,7 +20,7 @@
 
 .text-container{
 	max-width: $text-container;
-	padding: 2em 0 0;
+	padding: 0 0 2em;
 	&--center{
 		margin-left: auto;
 		margin-right: auto;
