--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -25,15 +25,17 @@
 	</div>
 </div>
 {{ else }}
+{{ if .Content }}
 <div class="page">
-		<div class="container">
-			<div class="page__main">
-				<div class="text-container text-container--center">
-					{{ .Content }}
-				</div>
+	<div class="container">
+		<div class="page__main">
+			<div class="text-container text-container--center">
+				{{ .Content }}
 			</div>
 		</div>
 	</div>
+</div>
+{{ end }}
 {{end}}
 {{- range .Params.blocks -}}
 {{- if eq .template "block-steps" -}}{{ partial "blocks/block-steps" (dict "Params" .) }}{{- end -}}
