--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,3 +1,8 @@
 .reviews{
-  background: $background-alt;
+  padding-bottom: 3em;
+ .step{
+  box-shadow: $box-shadow;
+  padding: 0 2em 2em;
+  font-size: 80%;
+ }
 }
