--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -1786,11 +1786,35 @@ small.expanded__intro {
 
 .reviews {
   padding-bottom: 3em; }
+  .reviews .steps__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -ms-flex-line-pack: end;
+        align-content: flex-end; }
   .reviews .step {
     -webkit-box-shadow: 11px 10px 40px rgba(0, 0, 0, 0.2);
             box-shadow: 11px 10px 40px rgba(0, 0, 0, 0.2);
     padding: 0 2em 2em;
-    font-size: 80%; }
+    font-size: 80%;
+    margin-bottom: 2em;
+    height: 30vh;
+    min-height: 300px;
+    overflow: hidden; }
 
 .footer {
   background-color: #ffffff;
