--- a/site/layouts/page/contact.html
+++ b/site/layouts/page/contact.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <label for='message'>Message</label>
-        <textarea placeholder="Hello..." id='message' required></textarea>
+        <textarea placeholder="Hello..." name="message" id='message' required></textarea>
         <div class="double">
           <div class="half">
             <input type="checkbox" id="check" required />
