--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -13,11 +13,11 @@
         <div class="footer__data__item">
           <div class="footer__row">
             <b>Monday - Thurdsay</b>
-            <p>8:00 AM - 12:00 PM | 2:00 PM - 5:30 PM</p>
+            <p>8:00 AM - 12:00 PM | 1:30 PM - 6:00 PM</p>
           </div>
           <div class="footer__row">
             <b>Friday</b>
-            <p>8:00 AM - 12:00 PM</p>
+            <p>Closed</p>
           </div>
           <div class="footer__row">
               <b>Saturday - Sunday </b>
